# DependManager

./: CMakeLists.txt  README.md  debian.deb
debian/DEBIAN/: control
debian/etc/apt/apt.conf.d/: 50depend-manager.conf
debian/opt/DependManager/: depend-manager
debian/usr/share/applications/: depend-manager.desktop
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  pages.h
src/build-system/: BSParser.h  XMakeBSParser.cpp
src/build-system-parser/: BSParser.cpp  BSParser.h  CMakeLists.txt  XMakeBSParser.cpp  XMakeBSParser.h
src/package-installer/: CMakeLists.txt  PackageInstaller.cpp  PackageInstaller.h
src/pages/: PageBSChoose.cpp  PageBSChoose.h  PageDependChoose.cpp  PageDependChoose.h  PageInstallWorking.cpp  PageInstallWorking.h  PageOpenProject.cpp  PageOpenProject.h  PageWorking.cpp  PageWorking.h
